rota get + botao ver mais funcionando

--- a/frontend/livro.html
+++ b/frontend/livro.html
@@ -21,7 +21,7 @@
 
   <main class="container">
     <section class="pagina-livro" id="detalhes-livro">
-    
+      <!--  inserido via JS -->
     </section>
   </main>
 
@@ -29,7 +29,11 @@
     <p>&copy; 2025 Biblioteca Online | Desenvolvido por Maria Longuim e Gabrielli Kachio</p>
   </footer>
 
-  <script src="js/livros.js"></script>
-  <script src="js/script.js"></script>
+  <script src="./js/livros.js"></script>
+  <script src="./js/script-livros.js"></script>
 </body>
 </html>
+
+
+
+
