--- a/frontend/cadastro.html
+++ b/frontend/cadastro.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="./imgs/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="./css/cadastro.css" />
-  <script src="script.js" defer></script>
   <title>Cadastro de Usuário</title>
 </head>
 <body class="cadastro-page">
@@ -14,8 +13,7 @@
         <h1>Biblioteca Online</h1>
         <ul class="menu">
           <li><a href="index.html">Início</a></li>
-          <li><a href="cadastro.html">Cadastre-se</a></li>
-          <li><a href="cadastrolivro.html">Cadastrar Livro</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
       </nav>
     </header>
@@ -23,35 +21,63 @@
   <main>
     <section class="form-container">
       <h2>Faça seu cadastro</h2>
-      <form method="post" action="http://127.0.0.1:1506/cadastro" accept-charset="UTF-8"id="cadastro">
+
+      <form id="form-cadastro">
         <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required />
+        <input type="text" id="nome" required />
 
         <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required />
+        <input type="email" id="email" required />
 
         <label for="cpf">CPF:</label>
-        <input type="text" id="cpf" name="cpf" maxlength="11" required />
+        <input type="text" id="cpf" maxlength="11" required />
 
         <label for="genero">Qual seu gênero preferido?</label>
-        <select id="genero" name="genero" required>
+        <select id="genero" required>
           <option value="">Selecione</option>
           <option value="Romance">Romance</option>
           <option value="Suspense">Suspense</option>
           <option value="Fantasia">Fantasia</option>
         </select>
 
-        <button type="submit">Validar</button>
-        <p id="mensagem"></p>
+        <label for="senha">Senha:</label>
+        <input type="password" id="senha" required />
+
+        <button type="submit">Cadastrar</button>
       </form>
     </section>
   </main>
 
-  <footer>
-      <p>
-        &copy; 2025 Biblioteca Online | Desenvolvido por Maria Longuim e
-        Gabrielli Kachio
-      </p>
-    </footer>
+  <script>
+    document.getElementById("form-cadastro").addEventListener("submit", async (e) => {
+      e.preventDefault();
+
+      // Apaga login antigo, caso exista
+      localStorage.removeItem("user_id");
+      localStorage.removeItem("user_nome");
+
+      const dados = {
+        nome: nome.value,
+        email: email.value,
+        cpf: cpf.value,
+        genero: genero.value,
+        senha: senha.value
+      };
+
+      const res = await fetch("http://127.0.0.1:1506/cadastro", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(dados)
+      });
+
+      const resposta = await res.text();
+      alert(resposta);
+
+      if (resposta.includes("sucesso")) {
+        // Cadastro ok → vai para login
+        window.location.href = "login.html";
+      }
+    });
+  </script>
 </body>
 </html>
