--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,21 +8,28 @@
     <link rel="stylesheet" href="./css/paginainicial.css" />
   </head>
   <body>
-    <header>
-      <nav class="container">
-        <h1>Biblioteca Online</h1>
-        <ul class="menu">
-          <li><a href="index.html">Início</a></li>
-          <li><a href="cadastro.html">Cadastre-se</a></li>
-          <li><a href="cadastrolivro.html">Cadastrar Livro</a></li>
-          <li><a href="login.html">Login</a></li>
-         <li><button id="logout-btn" class="logout-btn" style="display:none;" type="button" onclick="fazerLogout()">
-      Logout
-    </button>
-  </li>
-        </ul>
-      </nav>
-    </header>
+<header>
+  <nav class="container">
+    <h1>Biblioteca Online</h1>
+
+    <ul class="menu">
+      <li><a href="index.html">Início</a></li>
+      <li><a href="cadastro.html">Cadastre-se</a></li>
+      <li><a href="cadastrolivro.html">Cadastrar Livro</a></li>
+      <li><a href="login.html">Login</a></li>
+
+      <li>
+        <button id="logout-btn" class="logout-btn" style="display:none;" onclick="fazerLogout()">
+          Logout
+        </button>
+      </li>
+
+      <li class="search-box">
+        <input type="text" id="campoBusca" placeholder="Buscar Livro/Autor...">
+      </li>
+    </ul>
+  </nav>
+</header>
 
     <main class="container">
       <h2 class="categoria">Romance</h2>
