confirmação de logout e exclusão

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,30 +106,30 @@
       </p>
     </footer>
     
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
 
-    const logoutBtn = document.getElementById("logout-btn");
-    const userId = localStorage.getItem("user_id");
+      const logoutBtn = document.getElementById("logout-btn");
+     const userId = localStorage.getItem("user_id");
 
-    // Mostrar/esconder botão logout
-    if (userId) {
-      logoutBtn.style.display = "inline-block";
-    } else {
-      logoutBtn.style.display = "none";
-    }
+      if (userId) {
+       logoutBtn.style.display = "inline-block";
+       } else {
+        logoutBtn.style.display = "none";}
 
-    // Logout
-    logoutBtn.addEventListener("click", () => {
-      localStorage.removeItem("user_id");
-     localStorage.removeItem("user_nome");
+      logoutBtn.addEventListener("click", () => {
+        if (!confirm("Deseja realmente sair da sua conta?")) return;
 
-     alert("Você saiu da conta!");
+          localStorage.removeItem("user_id");
+          localStorage.removeItem("user_nome");
 
-     window.location.reload(); // recarrega a página e aplica mudanças
-   });
-  });
-  </script> 
+        alert("Você saiu da conta!");
+
+        window.location.reload();
+        });
+      });
+    </script>
+
   <script src="./js/script.js"></script>
   <script src="./js/livros.js"></script>
 
